--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bytemuck = {version = "1.23.0", features = ["derive"]}
 futures = {version = "0.3.31", features = ["executor"]}
 wgpu = "23.0.1"
 winit = "0.30.7"
