--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 [dependencies]
 bytemuck = {version = "1.23.0", features = ["derive"]}
 futures = {version = "0.3.31", features = ["executor"]}
+nalgebra = "0.33.2"
 wgpu = "23.0.1"
 winit = "0.30.7"
