really really funny sphere

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 bytemuck = {version = "1.23.0", features = ["derive"]}
 futures = {version = "0.3.31", features = ["executor"]}
 nalgebra = "0.33.2"
+tobj = {version = "4.0.3", features = ["async"]}
 wgpu = "23.0.1"
 winit = "0.30.7"
