--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 bytemuck = {version = "1.23.0", features = ["derive"]}
 futures = {version = "0.3.31", features = ["executor"]}
+image = "0.25.6"
 nalgebra = "0.33.2"
 tobj = {version = "4.0.3", features = ["async"]}
 wgpu = "23.0.1"
