--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 name = "aspen"
 version = "0.1.0"
 edition = "2021"
+license-file = "LICENSE"
+description = "A simple game engine built around the ECS architecture"
+repository = "https://github.com/jwjbadger/aspen/"
+readme = "README.md"
 
 [dependencies]
 bytemuck = {version = "1.23.0", features = ["derive"]}
